# agentic-builder-cli

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  .pypirc.example  CHANGELOG.md  README.md  docker-compose.yml  instructions.md  pyproject.toml  pytest.ini
.github/: release-drafter.yml
.github/workflows/: ci.yml  concurrent-generation.yml  create-changelog-pr.yml  release-drafter.yml  release.yml  template-ci.yml
docs/: checklist.md  interactive-mode.md
restack_gen/: README.md  __main__.py  cli.py  cli_interactive.py  config.py  constants.py
restack_gen/commands/: __init__.py  base.py  build.py  dev.py  doctor.py  generate.py  info.py  new.py  routes.py  test.py
restack_gen/core/: project.py  templates.py  validation.py
restack_gen/interactive/: __init__.py  cache.py  completers.py  context.py  fallback.py  prompts.py  sanitize.py  session.py  signals.py  templates.py  theme.py  validators.py  wizard.py
restack_gen/utils/: console.py  telemetry.py  text.py  toml.py  ui_components.py
temp/regen_project/: pyproject.toml
templates/py/: README.md.j2  agent.py.j2  agent_hitl.py.j2  agent_rag.py.j2  agent_stream.py.j2  client.py.j2  function.py.j2  function_search.py.j2  function_stream.py.j2  pyproject.toml.j2  service.py.j2  test_sample.py.j2  workflow.py.j2  workflow_rag_search.py.j2
templates/ts/: .eslintrc.cjs.j2  README.md.j2  agent.ts.j2  function.ts.j2  package.json.j2  restack.toml.j2  routes.ts.j2  server.ts.j2  test.ts.j2  tsconfig.json.j2  types.ts.j2  workflow.ts.j2
testapp/: README.md  service.py
testapp/scripts/: run_engine.bat  run_engine.sh
testapp/src/agents/: my_agent.py  testapp.py
tests/: test_build.py  test_cli.py  test_cli_interactive.py  test_cli_more.py  test_commands.py  test_core.py  test_dev.py  test_doctor.py  test_generator.py  test_info.py  test_info_more.py  test_interactive_context.py  test_interactive_fallback.py  test_interactive_more.py  test_interactive_templates.py  test_interactive_validators.py  test_main_dispatcher.py  test_new.py  test_project.py  test_routes.py  test_suite_extra.py  test_telemetry.py  test_templates.py  test_test.py  test_ui_components.py  test_validation.py
tests/e2e/: test_interactive_flow.py
tests/integration/: test_project_structure.py
tests/performance/: test_performance.py
tools/: check_changelog.py
(+2 files in other folders)
