[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["restack_gen"]

[project]
name = "restack-gen"
version = "0.3.0"
description = "CLI tool to scaffold opinionated Restack agent frameworks in Python and TypeScript."
authors = [
    { name = "Derrick Hodge", email = "team@thethinking.company" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "restack-ai>=0.0.115",
    "rich>=13.0.0"
]

[project.optional-dependencies]
interactive = ["prompt_toolkit>=3.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.1.0"]

[tool.pytest.ini_options]
addopts = "-ra -q"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
